--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"access": "public"
 	},
 	"scripts": {
-		"build": "tsc && bun run build-icons.ts",
+		"build": "tsc && tsc-alias && bun run build-icons.ts",
 		"dev": "n8n-node dev",
 		"format": "prettier nodes credentials --write",
 		"lint": "eslint nodes credentials package.json",
@@ -54,12 +54,13 @@
 	},
 	"devDependencies": {
 		"@n8n/node-cli": "^0.17.0",
-		"@types/node": "^22.19.1",
 		"@types/bun": "latest",
+		"@types/node": "^22.19.1",
 		"@typescript-eslint/parser": "^7.18.0",
 		"eslint": "^8.57.1",
 		"eslint-plugin-n8n-nodes-base": "^1.16.4",
 		"prettier": "^3.7.4",
+		"tsc-alias": "^1.8.16",
 		"typescript": "^5.9.3"
 	},
 	"peerDependencies": {
