--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 			"dist/credentials/DocusignOAuth2Api.credentials.js"
 		],
 		"nodes": [
-			"dist/nodes/Docusign/Docusign.node.js"
+			"dist/nodes/Docusign/Docusign.node.js",
+			"dist/nodes/Docusign/DocusignTrigger.node.js"
 		]
 	},
 	"devDependencies": {
